--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,3 +25,9 @@
     color: #282c34;
     text-decoration: underline;
 }
+
+@media screen and (max-width: 700px) {
+    .header {
+        flex-direction: column;
+    }
+  }
