--- a/src/components/IconList/IconList.css
+++ b/src/components/IconList/IconList.css
@@ -10,3 +10,9 @@ svg {
 .icon-size {
     font-size: 1rem;
 }
+
+@media screen and (max-width: 700px) {
+    .icon-list {
+        flex-direction: column;
+    }
+  }
