--- a/src/components/RecipeSteps/RecipeSteps.css
+++ b/src/components/RecipeSteps/RecipeSteps.css
@@ -11,3 +11,14 @@
 .step.row {
     flex-wrap: nowrap;
 }
+
+@media screen and (max-width: 700px) {
+    .step {
+        flex-direction: column;
+    }
+
+    .step-description {
+        margin-left: 0 !important;
+        padding-left: 0;
+    }
+  }
