Updated header components

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,6 +21,15 @@
     text-decoration: none;
 }
 
+.logo-image {
+    color: #282c34;
+    text-decoration: none;
+}
+
+.logo-image:hover {
+    color: #282c34;
+}
+
 .menu-item:hover {
     color: #282c34;
     text-decoration: underline;
